# deepsteer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REFERENCES.md  RESEARCH_BRIEF.md  RESEARCH_PLAN.md  pyproject.toml
deepsteer/: __init__.py
deepsteer/benchmarks/: __init__.py
deepsteer/core/: __init__.py  benchmark_suite.py  model_interface.py  types.py
deepsteer/datasets/: __init__.py  balancing.py  compositional_moral_pairs.py  llm_generation.py  minimal_pairs.py  moral_seeds.py  neutral_pool.py  pairing.py  persona_pairs.py  pipeline.py  sentiment_pairs.py  syntax_pairs.py  types.py  validation.py
deepsteer/steering/: __init__.py  chat_lora_trainer.py  data_mixing.py  lora_experiment.py  lora_trainer.py  moral_curriculum.py  training_hooks.py  training_time_steering.py
deepsteer/viz/: __init__.py  lora_experiments.py
examples/: c10_em_replication.py  c10_score_responses.py  c10_visualize.py  c15_reframed.py  c2_linguistic_comparison.py  c9_persona_trajectory.py  compare_models.py  figure_1_onset_overlay.py  moral_emergence.py  phase_b.py  phase_c1.py  phase_c4_3seed.py  phase_c4_compositional.py  phase_c_tier2.py  run_evaluation.py  step2_analyze.py  step2_finding2_head_start.py  step2_plot.py
outputs/: layer_wise_moral_probe_allenai_OLMo-1B-hf.json  layer_wise_moral_probe_allenai_OLMo-7B-hf.json
outputs/phase_a/: checkpoint_trajectory_probe_allenai_OLMo-2-0425-1B-early-training.json  foundation_specific_probe_allenai_OLMo-2-0425-1B-early-training.json  layer_wise_moral_probe_allenai_OLMo-2-0425-1B-early-training.json  moral_causal_tracer_allenai_OLMo-2-0425-1B-early-training.json  moral_fragility_test_allenai_OLMo-2-0425-1B-early-training.json  phase_a_summary.json
outputs/phase_a_smoke/: layer_wise_moral_probe_allenai_OLMo-2-0425-1B-early-training.json  phase_a_summary.json
outputs/phase_b/: phase_b_summary.json  (+1 more)
paper/: PAPER_PLAN.md
scripts/: c10_analyze.py  c10_em_replication.py  c10_inference_patch.py  c10_inference_patch_plot.py  c10_visualize.py  c8_persona_validation.py  c9_persona_trajectory.py  compare_models.py  generate_persona_corpus.py  moral_emergence.py  run_evaluation.py  step2_finding3_mechanism_check.py  step2_finding4_behavioral_judge.py  step2_persona_steering.py
(+650 files in other folders)
