[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsteer"
version = "0.1.0"
description = "Evaluating and steering alignment depth in LLM pre-training"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Orion Reblitz-Richardson"},
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate",
    "datasets",
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/deepsteer/deepsteer"
Repository = "https://github.com/deepsteer/deepsteer"
Issues = "https://github.com/deepsteer/deepsteer/issues"

[project.optional-dependencies]
api = [
    "anthropic",
    "openai",
]
lora = [
    "peft>=0.11",
]
all = [
    "deepsteer[api]",
    "deepsteer[lora]",
]
dev = [
    "deepsteer[all]",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["deepsteer*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require real model weights (deselect with '-m \"not slow\"')",
]
